--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +16,8 @@
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "socket.io": "^4.7.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
